# qcpred

./: .gitignore  README.md  pyproject.toml
scripts/: build_dataset.py  build_hop_sweep.py  build_hop_sweep_b1.py  build_training_rows.py  build_training_rows_from_executions.py  compute_hop.py  compute_robustness.py  compute_robustness_b1.py  feature_ablations.py  generate_circuits.py  inspect_circuits.py  inspect_features.py  run_experiments.py  train_robustness.py  train_robustness_b1.py
src/qcpred.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/qcpred/circuits/: random.py  registry.py
src/qcpred/datasets/: locations.py
src/qcpred/features/: circuit.py  transpiled.py
src/qcpred/utils/: paths.py
