[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qcpred"
version = "0.1.0"
description = "ML-based prediction of quantum circuit performance on real hardware"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Leila Erhili" }
]


dependencies = [
    "numpy",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
